# RBC-Studio

./: .env.example  .gitattributes  .gitignore  BUILD_PLAN.md  CLAUDE_PLAN.md  CODEXPLAN.md  CODEX_IMPLEMENTATION.md  CODEX_IMPROVEMENTS.md  DESIGN.md  FABLE5.md  GROWTH_PLAN.md  PRODUCT.md  README.md  index.html  manifest.webmanifest  netlify.toml  package-lock.json  package.json  rbc-916-polish-brief.md  rbc-claude-code-brief.md  rbc-studio_4.html  sw.js
.github/workflows/: verify.yml
benchmarks/cutout/: REPORT.md  manifest.json  manifest.schema.json
benchmarks/cutout/fixtures/: low-contrast-mask.pgm  low-contrast-source.pgm  open-hole-mask.pgm  open-hole-source.pgm  thin-handle-mask.pgm  thin-handle-source.pgm
config/: destinations.json
config/models/: cutout-models.json
css/: studio.css
docs/adr/: 0001-hybrid-control-plane.md  0002-durable-queue.md  0003-gpu-worker-boundary.md  0004-renderer-parity.md  0005-publisher-policy.md  0006-database-schema-scaffold.md  0007-cutout-model-gate.md
docs/runbooks/: db-restore.md  remote-disable.md
docs/strategy/: persona-bible.md  register-spec.md  satellite-briefs.md
infra/supabase/: README.md  config.toml  schema-manifest.json  seed.sql
infra/supabase/migrations/: 20260722090001_extensions_and_enums.sql  20260722090002_organizations_and_members.sql  20260722090003_pieces_and_campaigns.sql  (+11 more)
js/: ai.js  app.js  calendar.js  canvas.js  deskreview.js  facts.js  images.js  leaderboard.js  schedule.js  state.js  validation.js  version.js  zip.js
js/copy/: arc.js  dm.js  index.js  instagram.js  sold.js  telegram.js  threads.js  tiktok.js  x.js
js/factory/: copy.js  core.js  media.js  ui.js
js/remote/: auth.js  client.js  config.js  index.js  repository.js  sync.js
js/templates/: atelier.js  collage.js  dossier.js  editorial.js  gazette.js  maison.js  noir.js  poet.js  primitives.js  registry.js  runway.js  snapshot.js  specimen.js  vitrine.js
scripts/: generate-contract-fixtures.mjs  make-apple-icon.ps1  verify-config.mjs  verify-db-types.mjs  verify-migrations.mjs
services/gpu-worker/: README.md  pyproject.toml
services/gpu-worker/rbc_worker/: __init__.py  __main__.py  app.py  benchmark.py  config.py  cutout.py  logging.py  model_registry.py  providers.py  qa.py  queue.py  runtime.py  storage.py  worker.py  workspace.py
services/gpu-worker/tests/: test_foundation.py  test_milestone2.py
tests/: browser-e2e.cjs  foundation.mjs  remote.mjs  unit.mjs
tools/: visual-check.mjs
(+2 files in other folders)
