[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "rbc-gpu-worker"
version = "0.1.0"
description = "RBC Content Factory outbound GPU worker spine"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1"
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "ruff>=0.12,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
