[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

# The distribution is "rbc-gpu-worker" but the import package is "rbc_worker",
# so Hatchling cannot infer the wheel contents from the name. Declare it.
[tool.hatch.build.targets.wheel]
packages = ["rbc_worker"]

[project]
name = "rbc-gpu-worker"
version = "0.2.0"
description = "RBC Content Factory outbound GPU worker spine"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi>=0.115,<1",
  "pillow>=11,<13",
  "uvicorn[standard]>=0.34,<1"
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "ruff>=0.12,<1"]

[project.scripts]
rbc-gpu-worker = "rbc_worker.runtime:main"
rbc-cutout-benchmark = "rbc_worker.benchmark:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
